Create Data.Interfaces and Data.InMemory projects

--- a/BeautyDB.UI/BeautyDB.UI.csproj
+++ b/BeautyDB.UI/BeautyDB.UI.csproj
@@ -9,6 +9,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BeautyDB.Data.InMemory\BeautyDB.Data.InMemory.csproj" />
+    <ProjectReference Include="..\BeautyDB.Data.Interfaces\BeautyDB.Data.Interfaces.csproj" />
     <ProjectReference Include="..\BeautyDB.Domain\BeautyDB.Domain.csproj" />
   </ItemGroup>
 
