--- a/BeautyDB.UI/BeautyDB.UI.csproj
+++ b/BeautyDB.UI/BeautyDB.UI.csproj
@@ -14,4 +14,14 @@
     <ProjectReference Include="..\BeautyDB.Domain\BeautyDB.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="ReservationsListWindowState.cs">
+      <DependentUpon>ReservationsListWindow.xaml</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
 </Project>
